Fix post featured image bleed

--- a/web/app/themes/cnh/assets/styles/layouts/_posts.scss
+++ b/web/app/themes/cnh/assets/styles/layouts/_posts.scss
@@ -6,7 +6,7 @@
     .header-image {
       z-index: -2;
       position: absolute;
-      bottom: 0;
+      bottom: 5px;
       width: 100%;
 
       img {
